// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin moveBindings.es5.js: moveBindings.es5.js 1`] = `
"
/* #################################################################################### */

{
  var a = 1;
  const b = 2;
  let c = 3;
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var c, b, a;
{
  c = 3;
  b = 2;
  a = 1;
}
"
`;

exports[`plugin moveBindings.esNext.js: moveBindings.esNext.js 1`] = `
"
/* #################################################################################### */

{
  var a = 1;
  const b = 2;
  let c = 3;
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

let c, b, a;
{
  c = 3;
  b = 2;
  a = 1;
}
"
`;
